--- a/shopapp.webui/appsettings.json
+++ b/shopapp.webui/appsettings.json
@@ -13,5 +13,13 @@
     "UserName": "info.smtp.test@gmail.com",
     "Password": "Onur_3120"
   },
+  "Data": {
+    "AdminUser": {
+      "username": "Admin",
+      "password": "Shopapp_123",
+      "email": "info.smtp.test@gmail.com",
+      "role": "Admin"
+    }
+  },
   "AllowedHosts": "*"
 }
